tests/ucc/type/bad/ptr-vs-float.c
int main(void)
{
    int* a = 0.00f;

    return 0;
}
